# anothersky

./: .gitlab-ci.yml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: mkdocs-pages.yml
docs/en/: .authors.yml  index.md
docs/en/blogs/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
docs/javascript/: chat-bot.js  music.js
docs/overrides/: main.html
docs/overrides/partials/: author.html  chatbot-frame.html  chatbot.html  music-button.html  newsletter.html
docs/stylesheets/: chat-bot.css  extra.css  newsletter.css
docs/zh/: .meta.yml  index.md
docs/zh/blogs/: 1.md  2.md  3.md  4.md
