[project]
name = "molly-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-audio>=0.0.2",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-static-i18n>=1.3.0",
]
